--- a/composer.json
+++ b/composer.json
@@ -11,18 +11,17 @@
   "license": "MIT",
   "minimum-stability": "stable",
   "require": {
-    "php": "~5.5|~7.0",
+    "php": "~5.5 || ~7.0",
     "bankiru/doctrine-api-client": "~1.0",
-    "symfony/property-access": "~2.8 | ~3.0",
-    "symfony/dependency-injection": "~2.8 | ~3.0",
-    "symfony/config": "~2.8 | ~3.0",
-    "symfony/http-kernel": "~2.8 | ~3.0"
+    "symfony/property-access": "~2.8 || ~3.0",
+    "symfony/dependency-injection": "~2.8 || ~3.0",
+    "symfony/config": "~2.8 || ~3.0",
+    "symfony/http-kernel": "~2.8 || ~3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.5|~5.1",
-    "phpunit/php-code-coverage": "~3.3",
-    "symfony/web-profiler-bundle": "~2.8 | ~3.0",
-    "symfony/stopwatch": "~2.8 | ~3.0",
+    "phpunit/phpunit": "~4.8 || ~5.1",
+    "symfony/web-profiler-bundle": "~2.8 || ~3.0",
+    "symfony/stopwatch": "~2.8 || ~3.0",
     "symfony/monolog-bundle": "^2.8",
     "scaytrase/json-rpc-client": "~1.0, >=1.0.1"
   },
