--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "phpunit/phpunit": "~4.8 || ~5.1",
     "symfony/web-profiler-bundle": "~2.8 || ~3.0",
     "symfony/stopwatch": "~2.8 || ~3.0",
-    "symfony/monolog-bundle": "^2.8"
+    "symfony/monolog-bundle": "^2.8 || ^3.0",
+    "symfony/phpunit-bridge": "^2.8 || ^3.0"
   },
   "suggest": {
     "symfony/monolog-bundle": "For logging API requests",
