--- a/composer.json
+++ b/composer.json
@@ -11,20 +11,20 @@
   "license": "MIT",
   "minimum-stability": "stable",
   "require": {
-    "php": "~5.5 || ~7.0",
+    "php": "~5.5 | ~7.0",
     "bankiru/doctrine-api-client": "dev-release/2.0",
-    "bankiru/jsonrpc-browser-kit-client": "dev-master",
-    "symfony/property-access": "~2.8 || ~3.0",
-    "symfony/dependency-injection": "~2.8 || ~3.0",
-    "symfony/config": "~2.8 || ~3.0",
-    "symfony/http-kernel": "~2.8 || ~3.0"
+    "symfony/property-access": "~2.8 | ~3.0",
+    "symfony/dependency-injection": "~2.8 | ~3.0",
+    "symfony/config": "~2.8 | ~3.0",
+    "symfony/http-kernel": "~2.8 | ~3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.8 || ~5.1",
-    "symfony/web-profiler-bundle": "~2.8 || ~3.0",
-    "symfony/stopwatch": "~2.8 || ~3.0",
-    "symfony/monolog-bundle": "^2.8 || ^3.0",
-    "symfony/phpunit-bridge": "^2.8 || ^3.0"
+    "phpunit/phpunit": "^4.8.35 | ^5.5 | ^6.0",
+    "bankiru/jsonrpc-browser-kit-client": "dev-master",
+    "symfony/web-profiler-bundle": "~2.8 | ~3.0",
+    "symfony/stopwatch": "~2.8 | ~3.0",
+    "symfony/monolog-bundle": "^2.8 | ^3.0",
+    "symfony/phpunit-bridge": "^2.8 | ^3.0"
   },
   "suggest": {
     "symfony/monolog-bundle": "For logging API requests",
