--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "minimum-stability": "stable",
   "require": {
     "php": "~5.5 | ~7.0",
-    "bankiru/doctrine-api-client": "dev-master as 2.0.x@dev",
+    "bankiru/doctrine-api-client": "~2.0@dev",
     "symfony/property-access": "~2.8 | ~3.0",
     "symfony/dependency-injection": "~2.8 | ~3.0",
     "symfony/config": "~2.8 | ~3.0",
