--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "1.0-dev"
+      "dev-master": "2.x-dev",
+      "dev-1.x": "1.x-dev"
     }
   }
 }
