--- a/composer.json
+++ b/composer.json
@@ -11,33 +11,36 @@
   "license": "MIT",
   "minimum-stability": "stable",
   "require": {
-    "php": "~5.5 || ~7.0",
-    "bankiru/doctrine-api-client": "~1.0",
-    "symfony/property-access": "~2.8 || ~3.0",
-    "symfony/dependency-injection": "~2.8 || ~3.0",
-    "symfony/config": "~2.8 || ~3.0",
-    "symfony/http-kernel": "~2.8 || ~3.0"
+    "php": "~5.5 | ~7.0",
+    "bankiru/doctrine-api-client": "~2.0@dev",
+    "symfony/property-access": "~2.8 | ~3.0",
+    "symfony/dependency-injection": "~2.8 | ~3.0",
+    "symfony/config": "~2.8 | ~3.0",
+    "symfony/http-kernel": "~2.8 | ~3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.8 || ~5.1",
-    "symfony/web-profiler-bundle": "~2.8 || ~3.0",
-    "symfony/stopwatch": "~2.8 || ~3.0",
-    "symfony/monolog-bundle": "^2.8",
-    "scaytrase/json-rpc-client": "~1.0, >=1.0.1"
+    "phpunit/phpunit": "^4.8.35 | ^5.5 | ^6.0",
+    "symfony/web-profiler-bundle": "~2.8 | ~3.0",
+    "symfony/stopwatch": "~2.8 | ~3.0",
+    "symfony/monolog-bundle": "^2.8 | ^3.0",
+    "symfony/phpunit-bridge": "^2.8 | ^3.0",
+    "sensio/framework-extra-bundle": "~3.0"
   },
   "suggest": {
     "symfony/monolog-bundle": "For logging API requests",
     "symfony/web-profiler-bundle": "For integrating to web-profiling bundle",
-    "symfony/stopwatch": "For profiling API requests"
+    "symfony/stopwatch": "For profiling API requests",
+    "sensio/framework-extra-bundle": "For ParamConverter controller arguments support"
   },
   "autoload": {
     "psr-4": {
-      "Bankiru\\Api\\": "src/Bankiru/Api"
+      "Bankiru\\Api\\": "./"
     }
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "1.0-dev"
+      "dev-master": "2.x-dev",
+      "dev-1.x": "1.x-dev"
     }
   }
 }
